--- a/Semana12/Eureka/Gpo2Eureka2022/CapaService/CapaService.csproj
+++ b/Semana12/Eureka/Gpo2Eureka2022/CapaService/CapaService.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CapaModel\CapaModel.csproj" />
+  </ItemGroup>
+
 </Project>
