--- a/Semana12/Eureka/Gpo2Eureka2022/Gpo2Eureka2022/Gpo2Eureka2022.csproj
+++ b/Semana12/Eureka/Gpo2Eureka2022/Gpo2Eureka2022/Gpo2Eureka2022.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CapaModel\CapaModel.csproj" />
     <ProjectReference Include="..\CapaService\CapaService.csproj" />
   </ItemGroup>
 
